# IA-RELEASE-MANAGER

./: .env.example  .gitignore  README.md  docker-compose.yml  promp.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: context.py  prompts.py  provider.py  schemas.py
backend/app/ai/agents/: analyst.py  publisher.py  qa.py  writer.py
backend/app/ai/rag/: knowledge_base.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  ratelimit.py  security.py
backend/app/db/: session.py
backend/app/integrations/: gitlab_client.py  slack_client.py
backend/app/models/: __init__.py  board_list.py  commit.py  generation_log.py  issue.py  merge_request.py  release.py  repository.py  slack_workspace.py  user.py
backend/app/repositories/: base.py  board_lists.py  generation_logs.py  releases.py  repositories.py  slack_workspaces.py  users.py
backend/app/schemas/: auth.py  board.py  metrics.py  release.py  repository.py  slack.py
backend/app/services/: auth_service.py  board_service.py  metrics_service.py  release_service.py  repository_service.py  slack_service.py
backend/app/workflows/: nodes.py  release_workflow.py  runner.py  state.py
backend/tests/: conftest.py  fakes.py
backend/tests/integration/: test_auth_api.py  test_board_api.py  test_metrics_api.py  test_releases_api.py  test_repositories_api.py  test_slack_api.py  test_workflow.py
backend/tests/unit/: test_ai_context.py  test_gitlab_client.py  test_publisher_agent.py  test_release_service.py  test_security.py
(+51 files in other folders)
