[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-release-manager"
version = "1.0.0"
description = "AI-powered release management platform: GitLab -> LangGraph agents -> release notes -> Slack"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2",
    "python-gitlab>=4.13",
    "slack-sdk>=3.33",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5",
    "structlog>=24.4",
    "PyJWT>=2.9",
    "bcrypt>=4.2",
    "cryptography>=43.0",
    "slowapi>=0.1.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
